--- a/venture_funding_with_deep_learning.ipynb
+++ b/venture_funding_with_deep_learning.ipynb
@@ -2059,23 +2059,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "250"
+       "232"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Define the number of hidden nodes for the first hidden layer\n",
-    "hidden_nodes_layer1 = 250\n",
+    "hidden_nodes_layer1 = 232\n",
     "# YOUR CODE HERE\n",
     "\n",
     "# Review the number hidden nodes in the first layer\n",
@@ -2084,23 +2084,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "250"
+       "151"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Define the number of hidden nodes for the second hidden layer\n",
-    "hidden_nodes_layer2 = 250\n",
+    "hidden_nodes_layer2 = 151\n",
     "# YOUR CODE HERE\n",
     "\n",
     "# Review the number hidden nodes in the second layer\n",
@@ -2109,7 +2109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2120,7 +2120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2132,19 +2132,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add the second hidden layer\n",
     "# YOUR CODE HERE\n",
     "nn.add(\n",
-    "    Dense(input_dim=number_input_features, units=hidden_nodes_layer2, activation='relu'))"
+    "    Dense(units=hidden_nodes_layer2, activation='relu'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2155,25 +2155,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential_3\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense_3 (Dense)              (None, 250)               29250     \n",
+      "dense_9 (Dense)              (None, 232)               27144     \n",
       "_________________________________________________________________\n",
-      "dense_4 (Dense)              (None, 250)               62750     \n",
+      "dense_10 (Dense)             (None, 151)               35183     \n",
       "_________________________________________________________________\n",
-      "dense_5 (Dense)              (None, 1)                 251       \n",
+      "dense_11 (Dense)             (None, 151)               22952     \n",
+      "_________________________________________________________________\n",
+      "dense_12 (Dense)             (None, 1)                 152       \n",
       "=================================================================\n",
-      "Total params: 92,251\n",
-      "Trainable params: 92,251\n",
+      "Total params: 85,431\n",
+      "Trainable params: 85,431\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -2194,114 +2196,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 24009 samples, validate on 10290 samples\n",
+      "Train on 18006 samples, validate on 7718 samples\n",
       "Epoch 1/50\n",
-      "24009/24009 [==============================] - 1s 40us/sample - loss: 30439.4663 - acc: 0.4979 - val_loss: 98476.6933 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 47us/sample - loss: 0.5804 - acc: 0.7188 - val_loss: 0.5871 - val_acc: 0.7350\n",
       "Epoch 2/50\n",
-      "24009/24009 [==============================] - 1s 34us/sample - loss: 23840.2784 - acc: 0.4944 - val_loss: 29013.3900 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 39us/sample - loss: 0.5600 - acc: 0.7270 - val_loss: 0.5501 - val_acc: 0.7387\n",
       "Epoch 3/50\n",
-      "24009/24009 [==============================] - 1s 34us/sample - loss: 8281.2565 - acc: 0.4927 - val_loss: 7832.3134 - val_acc: 0.4936\n",
+      "18006/18006 [==============================] - 1s 39us/sample - loss: 0.5521 - acc: 0.7297 - val_loss: 0.5700 - val_acc: 0.7372\n",
       "Epoch 4/50\n",
-      "24009/24009 [==============================] - 1s 34us/sample - loss: 2748.6327 - acc: 0.5032 - val_loss: 772.5539 - val_acc: 0.5043\n",
+      "18006/18006 [==============================] - 1s 39us/sample - loss: 0.5497 - acc: 0.7298 - val_loss: 0.5571 - val_acc: 0.7376\n",
       "Epoch 5/50\n",
-      "24009/24009 [==============================] - 1s 34us/sample - loss: 94.3101 - acc: 0.5396 - val_loss: 0.6966 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 39us/sample - loss: 0.5480 - acc: 0.7309 - val_loss: 0.5679 - val_acc: 0.7354\n",
       "Epoch 6/50\n",
-      "24009/24009 [==============================] - 1s 33us/sample - loss: 0.6895 - acc: 0.5435 - val_loss: 0.6952 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 39us/sample - loss: 0.5468 - acc: 0.7318 - val_loss: 0.5587 - val_acc: 0.7357\n",
       "Epoch 7/50\n",
-      "24009/24009 [==============================] - 1s 34us/sample - loss: 0.6895 - acc: 0.5435 - val_loss: 0.6957 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 40us/sample - loss: 0.5450 - acc: 0.7333 - val_loss: 0.5573 - val_acc: 0.7401\n",
       "Epoch 8/50\n",
-      "24009/24009 [==============================] - 1s 34us/sample - loss: 0.6895 - acc: 0.5435 - val_loss: 0.6946 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 40us/sample - loss: 0.5439 - acc: 0.7328 - val_loss: 0.5574 - val_acc: 0.7388\n",
       "Epoch 9/50\n",
-      "24009/24009 [==============================] - 1s 33us/sample - loss: 0.6895 - acc: 0.5435 - val_loss: 0.6961 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 39us/sample - loss: 0.5444 - acc: 0.7324 - val_loss: 0.5543 - val_acc: 0.7394\n",
       "Epoch 10/50\n",
-      "24009/24009 [==============================] - 1s 33us/sample - loss: 0.6895 - acc: 0.5435 - val_loss: 0.6960 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 39us/sample - loss: 0.5421 - acc: 0.7329 - val_loss: 0.5680 - val_acc: 0.7359\n",
       "Epoch 11/50\n",
-      "24009/24009 [==============================] - 1s 34us/sample - loss: 0.6895 - acc: 0.5435 - val_loss: 0.6941 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 38us/sample - loss: 0.5417 - acc: 0.7345 - val_loss: 0.5609 - val_acc: 0.7388\n",
       "Epoch 12/50\n",
-      "24009/24009 [==============================] - 1s 35us/sample - loss: 0.6895 - acc: 0.5435 - val_loss: 0.6955 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 39us/sample - loss: 0.5413 - acc: 0.7333 - val_loss: 0.5647 - val_acc: 0.7385\n",
       "Epoch 13/50\n",
-      "24009/24009 [==============================] - 1s 33us/sample - loss: 0.6896 - acc: 0.5435 - val_loss: 0.6955 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 40us/sample - loss: 0.5408 - acc: 0.7346 - val_loss: 0.5561 - val_acc: 0.7370\n",
       "Epoch 14/50\n",
-      "24009/24009 [==============================] - 1s 35us/sample - loss: 0.6895 - acc: 0.5435 - val_loss: 0.6977 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 39us/sample - loss: 0.5402 - acc: 0.7332 - val_loss: 0.5653 - val_acc: 0.7374\n",
       "Epoch 15/50\n",
-      "24009/24009 [==============================] - 1s 34us/sample - loss: 0.6894 - acc: 0.5435 - val_loss: 0.6949 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 39us/sample - loss: 0.5401 - acc: 0.7366 - val_loss: 0.5663 - val_acc: 0.7370\n",
       "Epoch 16/50\n",
-      "24009/24009 [==============================] - 1s 34us/sample - loss: 0.6896 - acc: 0.5435 - val_loss: 0.6969 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 40us/sample - loss: 0.5385 - acc: 0.7355 - val_loss: 0.5622 - val_acc: 0.7387\n",
       "Epoch 17/50\n",
-      "24009/24009 [==============================] - 1s 34us/sample - loss: 0.6895 - acc: 0.5435 - val_loss: 0.6953 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 40us/sample - loss: 0.5389 - acc: 0.7365 - val_loss: 0.5624 - val_acc: 0.7372\n",
       "Epoch 18/50\n",
-      "24009/24009 [==============================] - 1s 34us/sample - loss: 0.6896 - acc: 0.5435 - val_loss: 0.6949 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 39us/sample - loss: 0.5375 - acc: 0.7369 - val_loss: 0.5684 - val_acc: 0.7392\n",
       "Epoch 19/50\n",
-      "24009/24009 [==============================] - 1s 35us/sample - loss: 0.6896 - acc: 0.5435 - val_loss: 0.6968 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 38us/sample - loss: 0.5372 - acc: 0.7374 - val_loss: 0.5647 - val_acc: 0.7380\n",
       "Epoch 20/50\n",
-      "24009/24009 [==============================] - 1s 35us/sample - loss: 0.6895 - acc: 0.5435 - val_loss: 0.6964 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 38us/sample - loss: 0.5357 - acc: 0.7368 - val_loss: 0.5769 - val_acc: 0.7371\n",
       "Epoch 21/50\n",
-      "24009/24009 [==============================] - 1s 33us/sample - loss: 0.6895 - acc: 0.5435 - val_loss: 0.6958 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 38us/sample - loss: 0.5365 - acc: 0.7377 - val_loss: 0.5823 - val_acc: 0.7378\n",
       "Epoch 22/50\n",
-      "24009/24009 [==============================] - 1s 33us/sample - loss: 0.6895 - acc: 0.5435 - val_loss: 0.6974 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 39us/sample - loss: 0.5358 - acc: 0.7361 - val_loss: 0.5763 - val_acc: 0.7370\n",
       "Epoch 23/50\n",
-      "24009/24009 [==============================] - 1s 35us/sample - loss: 0.6895 - acc: 0.5435 - val_loss: 0.6950 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 39us/sample - loss: 0.5351 - acc: 0.7384 - val_loss: 0.5659 - val_acc: 0.7397\n",
       "Epoch 24/50\n",
-      "24009/24009 [==============================] - 1s 35us/sample - loss: 0.6895 - acc: 0.5435 - val_loss: 0.6972 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 40us/sample - loss: 0.5345 - acc: 0.7382 - val_loss: 0.5783 - val_acc: 0.7379\n",
       "Epoch 25/50\n",
-      "24009/24009 [==============================] - 1s 35us/sample - loss: 0.6896 - acc: 0.5435 - val_loss: 0.6948 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 40us/sample - loss: 0.5344 - acc: 0.7387 - val_loss: 0.5907 - val_acc: 0.7353\n",
       "Epoch 26/50\n",
-      "24009/24009 [==============================] - 1s 35us/sample - loss: 0.6896 - acc: 0.5435 - val_loss: 0.6968 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 41us/sample - loss: 0.5343 - acc: 0.7377 - val_loss: 0.5840 - val_acc: 0.7362\n",
       "Epoch 27/50\n",
-      "24009/24009 [==============================] - 1s 36us/sample - loss: 0.6897 - acc: 0.5435 - val_loss: 0.6953 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 40us/sample - loss: 0.5339 - acc: 0.7386 - val_loss: 0.5758 - val_acc: 0.7344\n",
       "Epoch 28/50\n",
-      "24009/24009 [==============================] - 1s 35us/sample - loss: 0.6895 - acc: 0.5435 - val_loss: 0.6948 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 43us/sample - loss: 0.5330 - acc: 0.7386 - val_loss: 0.5770 - val_acc: 0.7375\n",
       "Epoch 29/50\n",
-      "24009/24009 [==============================] - 1s 35us/sample - loss: 0.6896 - acc: 0.5435 - val_loss: 0.6947 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 43us/sample - loss: 0.5327 - acc: 0.7393 - val_loss: 0.5898 - val_acc: 0.7370\n",
       "Epoch 30/50\n",
-      "24009/24009 [==============================] - 1s 35us/sample - loss: 0.6897 - acc: 0.5435 - val_loss: 0.6968 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 45us/sample - loss: 0.5324 - acc: 0.7393 - val_loss: 0.5705 - val_acc: 0.7359\n",
       "Epoch 31/50\n",
-      "24009/24009 [==============================] - 1s 34us/sample - loss: 0.6895 - acc: 0.5435 - val_loss: 0.6946 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 40us/sample - loss: 0.5316 - acc: 0.7386 - val_loss: 0.6041 - val_acc: 0.7331\n",
       "Epoch 32/50\n",
-      "24009/24009 [==============================] - 1s 36us/sample - loss: 0.6896 - acc: 0.5435 - val_loss: 0.6993 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 39us/sample - loss: 0.5337 - acc: 0.7378 - val_loss: 0.5878 - val_acc: 0.7388\n",
       "Epoch 33/50\n",
-      "24009/24009 [==============================] - 1s 33us/sample - loss: 0.6897 - acc: 0.5435 - val_loss: 0.6949 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 39us/sample - loss: 0.5316 - acc: 0.7390 - val_loss: 0.5829 - val_acc: 0.7376\n",
       "Epoch 34/50\n",
-      "24009/24009 [==============================] - 1s 34us/sample - loss: 0.6894 - acc: 0.5435 - val_loss: 0.6934 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 39us/sample - loss: 0.5309 - acc: 0.7399 - val_loss: 0.5787 - val_acc: 0.7380\n",
       "Epoch 35/50\n",
-      "24009/24009 [==============================] - 1s 35us/sample - loss: 0.6897 - acc: 0.5435 - val_loss: 0.6936 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 41us/sample - loss: 0.5303 - acc: 0.7383 - val_loss: 0.5950 - val_acc: 0.7401\n",
       "Epoch 36/50\n",
-      "24009/24009 [==============================] - 1s 34us/sample - loss: 0.6897 - acc: 0.5435 - val_loss: 0.6970 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 41us/sample - loss: 0.5298 - acc: 0.7398 - val_loss: 0.5785 - val_acc: 0.7375\n",
       "Epoch 37/50\n",
-      "24009/24009 [==============================] - 1s 35us/sample - loss: 0.6896 - acc: 0.5435 - val_loss: 0.6971 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 40us/sample - loss: 0.5298 - acc: 0.7393 - val_loss: 0.5843 - val_acc: 0.7371\n",
       "Epoch 38/50\n",
-      "24009/24009 [==============================] - 1s 34us/sample - loss: 0.6897 - acc: 0.5435 - val_loss: 0.6956 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 39us/sample - loss: 0.5300 - acc: 0.7404 - val_loss: 0.5798 - val_acc: 0.7387\n",
       "Epoch 39/50\n",
-      "24009/24009 [==============================] - 1s 34us/sample - loss: 0.6898 - acc: 0.5435 - val_loss: 0.6936 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 39us/sample - loss: 0.5293 - acc: 0.7403 - val_loss: 0.5748 - val_acc: 0.7391\n",
       "Epoch 40/50\n",
-      "24009/24009 [==============================] - 1s 33us/sample - loss: 0.6897 - acc: 0.5435 - val_loss: 0.6969 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 39us/sample - loss: 0.5300 - acc: 0.7402 - val_loss: 0.5902 - val_acc: 0.7376\n",
       "Epoch 41/50\n",
-      "24009/24009 [==============================] - 1s 34us/sample - loss: 0.6898 - acc: 0.5435 - val_loss: 0.6986 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 39us/sample - loss: 0.5301 - acc: 0.7403 - val_loss: 0.6040 - val_acc: 0.7366\n",
       "Epoch 42/50\n",
-      "24009/24009 [==============================] - 1s 43us/sample - loss: 0.6897 - acc: 0.5435 - val_loss: 0.6960 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 38us/sample - loss: 0.5287 - acc: 0.7405 - val_loss: 0.6341 - val_acc: 0.7388\n",
       "Epoch 43/50\n",
-      "24009/24009 [==============================] - 1s 37us/sample - loss: 0.6897 - acc: 0.5435 - val_loss: 0.6947 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 42us/sample - loss: 0.5303 - acc: 0.7406 - val_loss: 0.6274 - val_acc: 0.7366\n",
       "Epoch 44/50\n",
-      "24009/24009 [==============================] - 1s 36us/sample - loss: 0.6899 - acc: 0.5435 - val_loss: 0.6950 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 39us/sample - loss: 0.5290 - acc: 0.7411 - val_loss: 0.5968 - val_acc: 0.7389\n",
       "Epoch 45/50\n",
-      "24009/24009 [==============================] - 1s 36us/sample - loss: 0.6898 - acc: 0.5435 - val_loss: 0.6959 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 39us/sample - loss: 0.5334 - acc: 0.7399 - val_loss: 0.6139 - val_acc: 0.7397\n",
       "Epoch 46/50\n",
-      "24009/24009 [==============================] - 1s 35us/sample - loss: 0.6897 - acc: 0.5435 - val_loss: 0.6939 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 39us/sample - loss: 0.5281 - acc: 0.7404 - val_loss: 0.6139 - val_acc: 0.7381\n",
       "Epoch 47/50\n",
-      "24009/24009 [==============================] - 1s 34us/sample - loss: 0.6898 - acc: 0.5435 - val_loss: 0.6970 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 38us/sample - loss: 0.5283 - acc: 0.7410 - val_loss: 0.6199 - val_acc: 0.7396\n",
       "Epoch 48/50\n",
-      "24009/24009 [==============================] - 1s 38us/sample - loss: 0.6900 - acc: 0.5435 - val_loss: 0.6972 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 38us/sample - loss: 0.5279 - acc: 0.7409 - val_loss: 0.6151 - val_acc: 0.7388\n",
       "Epoch 49/50\n",
-      "24009/24009 [==============================] - 1s 35us/sample - loss: 0.6897 - acc: 0.5435 - val_loss: 0.6957 - val_acc: 0.5064\n",
+      "18006/18006 [==============================] - 1s 39us/sample - loss: 0.5276 - acc: 0.7401 - val_loss: 0.6078 - val_acc: 0.7341\n",
       "Epoch 50/50\n",
-      "24009/24009 [==============================] - 1s 35us/sample - loss: 0.6899 - acc: 0.5435 - val_loss: 0.6982 - val_acc: 0.5064\n"
+      "18006/18006 [==============================] - 1s 39us/sample - loss: 0.5281 - acc: 0.7406 - val_loss: 0.6179 - val_acc: 0.7388\n"
      ]
     }
    ],
@@ -2312,7 +2314,7 @@
     "nn.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])\n",
     "\n",
     "# Train the model\n",
-    "model_1 = nn.fit(X, y, validation_split=0.3, epochs=50)"
+    "model_1 = nn.fit(X_train_scaled, y_train, validation_split=0.3, epochs=50)"
    ]
   },
   {
