--- a/venture_funding_with_deep_learning.ipynb
+++ b/venture_funding_with_deep_learning.ipynb
@@ -2800,17 +2800,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compile the Sequential model\n",
-    "nn_A1.compile(loss=\"mean_squared_error\", optimizer=\"adam\", metrics=[\"mse\"])\n"
+    "nn_A1.compile(loss=\"mean_squared_error\", optimizer=\"adam\", metrics=[\"accuracy\"])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -2818,105 +2818,105 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "25724/25724 - 0s - loss: 1.8406 - mean_squared_error: 1.8406\n",
+      "25724/25724 - 1s - loss: 0.1807 - acc: 0.7406\n",
       "Epoch 2/50\n",
-      "25724/25724 - 0s - loss: 0.3228 - mean_squared_error: 0.3228\n",
+      "25724/25724 - 0s - loss: 0.1805 - acc: 0.7406\n",
       "Epoch 3/50\n",
-      "25724/25724 - 0s - loss: 0.2164 - mean_squared_error: 0.2164\n",
+      "25724/25724 - 0s - loss: 0.1806 - acc: 0.7407\n",
       "Epoch 4/50\n",
-      "25724/25724 - 0s - loss: 0.2170 - mean_squared_error: 0.2170\n",
+      "25724/25724 - 0s - loss: 0.1815 - acc: 0.7402\n",
       "Epoch 5/50\n",
-      "25724/25724 - 0s - loss: 0.2319 - mean_squared_error: 0.2319\n",
+      "25724/25724 - 0s - loss: 0.1814 - acc: 0.7392\n",
       "Epoch 6/50\n",
-      "25724/25724 - 0s - loss: 0.2618 - mean_squared_error: 0.2618\n",
+      "25724/25724 - 0s - loss: 0.1806 - acc: 0.7405\n",
       "Epoch 7/50\n",
-      "25724/25724 - 0s - loss: 0.2602 - mean_squared_error: 0.2602\n",
+      "25724/25724 - 0s - loss: 0.1809 - acc: 0.7402\n",
       "Epoch 8/50\n",
-      "25724/25724 - 0s - loss: 0.2494 - mean_squared_error: 0.2494\n",
+      "25724/25724 - 0s - loss: 0.1801 - acc: 0.7395\n",
       "Epoch 9/50\n",
-      "25724/25724 - 0s - loss: 0.2270 - mean_squared_error: 0.2270\n",
+      "25724/25724 - 0s - loss: 0.1807 - acc: 0.7388\n",
       "Epoch 10/50\n",
-      "25724/25724 - 0s - loss: 0.2267 - mean_squared_error: 0.2267\n",
+      "25724/25724 - 0s - loss: 0.1806 - acc: 0.7399\n",
       "Epoch 11/50\n",
-      "25724/25724 - 0s - loss: 0.2182 - mean_squared_error: 0.2182\n",
+      "25724/25724 - 1s - loss: 0.1804 - acc: 0.7407\n",
       "Epoch 12/50\n",
-      "25724/25724 - 0s - loss: 0.2193 - mean_squared_error: 0.2193\n",
+      "25724/25724 - 0s - loss: 0.1806 - acc: 0.7401\n",
       "Epoch 13/50\n",
-      "25724/25724 - 0s - loss: 0.2085 - mean_squared_error: 0.2085\n",
+      "25724/25724 - 1s - loss: 0.1801 - acc: 0.7403\n",
       "Epoch 14/50\n",
-      "25724/25724 - 0s - loss: 0.2043 - mean_squared_error: 0.2043\n",
+      "25724/25724 - 1s - loss: 0.1810 - acc: 0.7407\n",
       "Epoch 15/50\n",
-      "25724/25724 - 0s - loss: 0.1999 - mean_squared_error: 0.1999\n",
+      "25724/25724 - 0s - loss: 0.1800 - acc: 0.7406\n",
       "Epoch 16/50\n",
-      "25724/25724 - 0s - loss: 0.2002 - mean_squared_error: 0.2002\n",
+      "25724/25724 - 1s - loss: 0.1805 - acc: 0.7402\n",
       "Epoch 17/50\n",
-      "25724/25724 - 0s - loss: 0.1997 - mean_squared_error: 0.1997\n",
+      "25724/25724 - 1s - loss: 0.1806 - acc: 0.7400\n",
       "Epoch 18/50\n",
-      "25724/25724 - 0s - loss: 0.1971 - mean_squared_error: 0.1971\n",
+      "25724/25724 - 1s - loss: 0.1800 - acc: 0.7397\n",
       "Epoch 19/50\n",
-      "25724/25724 - 0s - loss: 0.1946 - mean_squared_error: 0.1946\n",
+      "25724/25724 - 1s - loss: 0.1802 - acc: 0.7408\n",
       "Epoch 20/50\n",
-      "25724/25724 - 0s - loss: 0.1917 - mean_squared_error: 0.1917\n",
+      "25724/25724 - 1s - loss: 0.1801 - acc: 0.7402\n",
       "Epoch 21/50\n",
-      "25724/25724 - 0s - loss: 0.1933 - mean_squared_error: 0.1933\n",
+      "25724/25724 - 1s - loss: 0.1798 - acc: 0.7394\n",
       "Epoch 22/50\n",
-      "25724/25724 - 0s - loss: 0.1920 - mean_squared_error: 0.1920\n",
+      "25724/25724 - 1s - loss: 0.1806 - acc: 0.7402\n",
       "Epoch 23/50\n",
-      "25724/25724 - 0s - loss: 0.1901 - mean_squared_error: 0.1901\n",
+      "25724/25724 - 1s - loss: 0.1804 - acc: 0.7402\n",
       "Epoch 24/50\n",
-      "25724/25724 - 0s - loss: 0.1881 - mean_squared_error: 0.1881\n",
+      "25724/25724 - 1s - loss: 0.1799 - acc: 0.7390\n",
       "Epoch 25/50\n",
-      "25724/25724 - 0s - loss: 0.1897 - mean_squared_error: 0.1897\n",
+      "25724/25724 - 1s - loss: 0.1799 - acc: 0.7404\n",
       "Epoch 26/50\n",
-      "25724/25724 - 0s - loss: 0.1893 - mean_squared_error: 0.1893\n",
+      "25724/25724 - 1s - loss: 0.1803 - acc: 0.7399\n",
       "Epoch 27/50\n",
-      "25724/25724 - 0s - loss: 0.1879 - mean_squared_error: 0.1879\n",
+      "25724/25724 - 1s - loss: 0.1806 - acc: 0.7404\n",
       "Epoch 28/50\n",
-      "25724/25724 - 0s - loss: 0.1882 - mean_squared_error: 0.1882\n",
+      "25724/25724 - 0s - loss: 0.1808 - acc: 0.7391\n",
       "Epoch 29/50\n",
-      "25724/25724 - 0s - loss: 0.1866 - mean_squared_error: 0.1866\n",
+      "25724/25724 - 0s - loss: 0.1801 - acc: 0.7399\n",
       "Epoch 30/50\n",
-      "25724/25724 - 0s - loss: 0.1863 - mean_squared_error: 0.1863\n",
+      "25724/25724 - 1s - loss: 0.1798 - acc: 0.7409\n",
       "Epoch 31/50\n",
-      "25724/25724 - 0s - loss: 0.1853 - mean_squared_error: 0.1853\n",
+      "25724/25724 - 1s - loss: 0.1802 - acc: 0.7409\n",
       "Epoch 32/50\n",
-      "25724/25724 - 0s - loss: 0.1862 - mean_squared_error: 0.1862\n",
+      "25724/25724 - 0s - loss: 0.1807 - acc: 0.7404\n",
       "Epoch 33/50\n",
-      "25724/25724 - 0s - loss: 0.1886 - mean_squared_error: 0.1886\n",
+      "25724/25724 - 1s - loss: 0.1804 - acc: 0.7395\n",
       "Epoch 34/50\n",
-      "25724/25724 - 0s - loss: 0.1870 - mean_squared_error: 0.1870\n",
+      "25724/25724 - 1s - loss: 0.1800 - acc: 0.7407\n",
       "Epoch 35/50\n",
-      "25724/25724 - 0s - loss: 0.1875 - mean_squared_error: 0.1875\n",
+      "25724/25724 - 1s - loss: 0.1800 - acc: 0.7408\n",
       "Epoch 36/50\n",
-      "25724/25724 - 0s - loss: 0.1858 - mean_squared_error: 0.1858\n",
+      "25724/25724 - 0s - loss: 0.1801 - acc: 0.7407\n",
       "Epoch 37/50\n",
-      "25724/25724 - 0s - loss: 0.1860 - mean_squared_error: 0.1860\n",
+      "25724/25724 - 0s - loss: 0.1803 - acc: 0.7404\n",
       "Epoch 38/50\n",
-      "25724/25724 - 0s - loss: 0.1850 - mean_squared_error: 0.1850\n",
+      "25724/25724 - 1s - loss: 0.1804 - acc: 0.7401\n",
       "Epoch 39/50\n",
-      "25724/25724 - 0s - loss: 0.1856 - mean_squared_error: 0.1856\n",
+      "25724/25724 - 1s - loss: 0.1803 - acc: 0.7401\n",
       "Epoch 40/50\n",
-      "25724/25724 - 0s - loss: 0.1858 - mean_squared_error: 0.1858\n",
+      "25724/25724 - 1s - loss: 0.1801 - acc: 0.7404\n",
       "Epoch 41/50\n",
-      "25724/25724 - 0s - loss: 0.1868 - mean_squared_error: 0.1868\n",
+      "25724/25724 - 1s - loss: 0.1801 - acc: 0.7407\n",
       "Epoch 42/50\n",
-      "25724/25724 - 0s - loss: 0.1846 - mean_squared_error: 0.1846\n",
+      "25724/25724 - 0s - loss: 0.1804 - acc: 0.7400\n",
       "Epoch 43/50\n",
-      "25724/25724 - 0s - loss: 0.1833 - mean_squared_error: 0.1833\n",
+      "25724/25724 - 0s - loss: 0.1796 - acc: 0.7409\n",
       "Epoch 44/50\n",
-      "25724/25724 - 0s - loss: 0.1836 - mean_squared_error: 0.1836\n",
+      "25724/25724 - 1s - loss: 0.1801 - acc: 0.7409\n",
       "Epoch 45/50\n",
-      "25724/25724 - 0s - loss: 0.1852 - mean_squared_error: 0.1852\n",
+      "25724/25724 - 1s - loss: 0.1801 - acc: 0.7407\n",
       "Epoch 46/50\n",
-      "25724/25724 - 0s - loss: 0.1849 - mean_squared_error: 0.1849\n",
+      "25724/25724 - 0s - loss: 0.1802 - acc: 0.7407\n",
       "Epoch 47/50\n",
-      "25724/25724 - 0s - loss: 0.1853 - mean_squared_error: 0.1853\n",
+      "25724/25724 - 0s - loss: 0.1803 - acc: 0.7400\n",
       "Epoch 48/50\n",
-      "25724/25724 - 0s - loss: 0.1842 - mean_squared_error: 0.1842\n",
+      "25724/25724 - 1s - loss: 0.1798 - acc: 0.7408\n",
       "Epoch 49/50\n",
-      "25724/25724 - 0s - loss: 0.1845 - mean_squared_error: 0.1845\n",
+      "25724/25724 - 0s - loss: 0.1801 - acc: 0.7412\n",
       "Epoch 50/50\n",
-      "25724/25724 - 0s - loss: 0.1840 - mean_squared_error: 0.1840\n"
+      "25724/25724 - 0s - loss: 0.1798 - acc: 0.7400\n"
      ]
     }
    ],
@@ -3031,18 +3031,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compile the model\n",
     "# YOUR CODE HERE\n",
-    "nn_A2.compile(loss=\"mean_absolute_error\", optimizer=\"adam\", metrics=[\"mse\"])"
+    "nn_A2.compile(loss=\"mean_squared_error\", optimizer=\"adam\", metrics=[\"binary_accuracy\"])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fit_model_A1 = nn_A1.fit(X_train_scaled, y_train, epochs=50, verbose=2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -3050,50 +3059,108 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "25724/25724 - 0s - loss: 0.1854 - mean_squared_error: 0.1854\n",
+      "25724/25724 - 0s - loss: 0.2039 - binary_accuracy: 0.7188\n",
       "Epoch 2/50\n",
-      "25724/25724 - 0s - loss: 0.1832 - mean_squared_error: 0.1832\n",
+      "25724/25724 - 0s - loss: 0.2011 - binary_accuracy: 0.7203\n",
       "Epoch 3/50\n",
-      "25724/25724 - 0s - loss: 0.1835 - mean_squared_error: 0.1835\n",
+      "25724/25724 - 0s - loss: 0.2006 - binary_accuracy: 0.7190\n",
       "Epoch 4/50\n",
-      "25724/25724 - 0s - loss: 0.1845 - mean_squared_error: 0.1845\n",
+      "25724/25724 - 0s - loss: 0.2014 - binary_accuracy: 0.7187\n",
       "Epoch 5/50\n",
-      "25724/25724 - 0s - loss: 0.1847 - mean_squared_error: 0.1847\n",
+      "25724/25724 - 0s - loss: 0.2036 - binary_accuracy: 0.7185\n",
       "Epoch 6/50\n",
-      "25724/25724 - 0s - loss: 0.1843 - mean_squared_error: 0.1843\n",
+      "25724/25724 - 0s - loss: 0.2026 - binary_accuracy: 0.7183\n",
       "Epoch 7/50\n",
-      "25724/25724 - 0s - loss: 0.1839 - mean_squared_error: 0.1839\n",
+      "25724/25724 - 0s - loss: 0.2017 - binary_accuracy: 0.7197\n",
       "Epoch 8/50\n",
-      "25724/25724 - 0s - loss: 0.1831 - mean_squared_error: 0.1831\n",
+      "25724/25724 - 0s - loss: 0.2020 - binary_accuracy: 0.7194\n",
       "Epoch 9/50\n",
-      "25724/25724 - 0s - loss: 0.1830 - mean_squared_error: 0.1830\n",
+      "25724/25724 - 0s - loss: 0.2017 - binary_accuracy: 0.7209\n",
       "Epoch 10/50\n",
-      "25724/25724 - 0s - loss: 0.1838 - mean_squared_error: 0.1838\n",
+      "25724/25724 - 0s - loss: 0.2028 - binary_accuracy: 0.7209\n",
       "Epoch 11/50\n",
-      "25724/25724 - 0s - loss: 0.1837 - mean_squared_error: 0.1837\n",
+      "25724/25724 - 0s - loss: 0.2024 - binary_accuracy: 0.7190\n",
       "Epoch 12/50\n",
-      "25724/25724 - 0s - loss: 0.1832 - mean_squared_error: 0.1832\n",
+      "25724/25724 - 0s - loss: 0.2020 - binary_accuracy: 0.7201\n",
       "Epoch 13/50\n",
-      "25724/25724 - 0s - loss: 0.1837 - mean_squared_error: 0.1837\n",
+      "25724/25724 - 0s - loss: 0.2014 - binary_accuracy: 0.7193\n",
       "Epoch 14/50\n",
-      "25724/25724 - 1s - loss: 0.1826 - mean_squared_error: 0.1826\n",
+      "25724/25724 - 0s - loss: 0.2027 - binary_accuracy: 0.7194\n",
       "Epoch 15/50\n",
-      "25724/25724 - 0s - loss: 0.1835 - mean_squared_error: 0.1835\n",
+      "25724/25724 - 0s - loss: 0.2022 - binary_accuracy: 0.7194\n",
       "Epoch 16/50\n",
-      "25724/25724 - 0s - loss: 0.1835 - mean_squared_error: 0.1835\n",
-      "Epoch 17/50\n"
+      "25724/25724 - 0s - loss: 0.2022 - binary_accuracy: 0.7200\n",
+      "Epoch 17/50\n",
+      "25724/25724 - 0s - loss: 0.2019 - binary_accuracy: 0.7204\n",
+      "Epoch 18/50\n",
+      "25724/25724 - 0s - loss: 0.2022 - binary_accuracy: 0.7200\n",
+      "Epoch 19/50\n",
+      "25724/25724 - 0s - loss: 0.2022 - binary_accuracy: 0.7175\n",
+      "Epoch 20/50\n",
+      "25724/25724 - 0s - loss: 0.2021 - binary_accuracy: 0.7200\n",
+      "Epoch 21/50\n",
+      "25724/25724 - 0s - loss: 0.2027 - binary_accuracy: 0.7204\n",
+      "Epoch 22/50\n",
+      "25724/25724 - 0s - loss: 0.2022 - binary_accuracy: 0.7200\n",
+      "Epoch 23/50\n",
+      "25724/25724 - 0s - loss: 0.2020 - binary_accuracy: 0.7198\n",
+      "Epoch 24/50\n",
+      "25724/25724 - 0s - loss: 0.2024 - binary_accuracy: 0.7205\n",
+      "Epoch 25/50\n",
+      "25724/25724 - 0s - loss: 0.2023 - binary_accuracy: 0.7197\n",
+      "Epoch 26/50\n",
+      "25724/25724 - 0s - loss: 0.2022 - binary_accuracy: 0.7198\n",
+      "Epoch 27/50\n",
+      "25724/25724 - 0s - loss: 0.2020 - binary_accuracy: 0.7197\n",
+      "Epoch 28/50\n",
+      "25724/25724 - 0s - loss: 0.2021 - binary_accuracy: 0.7200\n",
+      "Epoch 29/50\n",
+      "25724/25724 - 0s - loss: 0.2021 - binary_accuracy: 0.7200\n",
+      "Epoch 30/50\n",
+      "25724/25724 - 0s - loss: 0.2025 - binary_accuracy: 0.7184\n",
+      "Epoch 31/50\n",
+      "25724/25724 - 0s - loss: 0.2021 - binary_accuracy: 0.7189\n",
+      "Epoch 32/50\n",
+      "25724/25724 - 0s - loss: 0.2029 - binary_accuracy: 0.7194\n",
+      "Epoch 33/50\n",
+      "25724/25724 - 0s - loss: 0.2025 - binary_accuracy: 0.7192\n",
+      "Epoch 34/50\n",
+      "25724/25724 - 0s - loss: 0.2021 - binary_accuracy: 0.7201\n",
+      "Epoch 35/50\n",
+      "25724/25724 - 0s - loss: 0.2025 - binary_accuracy: 0.7194\n",
+      "Epoch 36/50\n",
+      "25724/25724 - 0s - loss: 0.2030 - binary_accuracy: 0.7197\n",
+      "Epoch 37/50\n",
+      "25724/25724 - 0s - loss: 0.2020 - binary_accuracy: 0.7192\n",
+      "Epoch 38/50\n",
+      "25724/25724 - 0s - loss: 0.2018 - binary_accuracy: 0.7195\n",
+      "Epoch 39/50\n",
+      "25724/25724 - 0s - loss: 0.2020 - binary_accuracy: 0.7191\n",
+      "Epoch 40/50\n",
+      "25724/25724 - 0s - loss: 0.2025 - binary_accuracy: 0.7188\n",
+      "Epoch 41/50\n",
+      "25724/25724 - 0s - loss: 0.2025 - binary_accuracy: 0.7195\n",
+      "Epoch 42/50\n",
+      "25724/25724 - 0s - loss: 0.2018 - binary_accuracy: 0.7202\n",
+      "Epoch 43/50\n",
+      "25724/25724 - 0s - loss: 0.2024 - binary_accuracy: 0.7199\n",
+      "Epoch 44/50\n",
+      "25724/25724 - 0s - loss: 0.2029 - binary_accuracy: 0.7187\n",
+      "Epoch 45/50\n",
+      "25724/25724 - 1s - loss: 0.2021 - binary_accuracy: 0.7192\n",
+      "Epoch 46/50\n",
+      "25724/25724 - 1s - loss: 0.2017 - binary_accuracy: 0.7190\n",
+      "Epoch 47/50\n",
+      "25724/25724 - 1s - loss: 0.2021 - binary_accuracy: 0.7194\n",
+      "Epoch 48/50\n",
+      "25724/25724 - 1s - loss: 0.2021 - binary_accuracy: 0.7194\n",
+      "Epoch 49/50\n",
+      "25724/25724 - 0s - loss: 0.2032 - binary_accuracy: 0.7195\n",
+      "Epoch 50/50\n",
+      "25724/25724 - 0s - loss: 0.2019 - binary_accuracy: 0.7217\n"
      ]
     }
    ],
-   "source": [
-    "fit_model_A1 = nn_A1.fit(X_train_scaled, y_train, epochs=50, verbose=2)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Fit the model\n",
     "# YOUR CODE HERE\n",
@@ -3108,15 +3175,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Evaluate the model using the test data\n",
+    "model_loss, model_accuracy = nn_imported.evaluate(X_test_scaled, y_test, verbose=2)\n",
+    "\n",
+    "# Display evaluation results\n",
+    "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Model Results\n",
+      "8575/8575 - 0s - loss: 0.5576 - acc: 0.7279\n",
+      "Loss: 0.5576005564973237, Accuracy: 0.7279300093650818\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Original Model Results\")\n",
     "\n",
     "# Evaluate the model loss and accuracy metrics using the evaluate method and the test data\n",
-    "model_loss, model_accuracy = # YOUR CODE HERE\n",
+    "model_loss, model_accuracy = nn.evaluate(X_test_scaled, y_test, verbose=2)\n",
+    "# YOUR CODE HERE\n",
     "\n",
     "# Display the model loss and accuracy results\n",
     "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")"
@@ -3124,14 +3213,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alternative Model 1 Results\n",
+      "8575/8575 - 0s - loss: 0.1867 - acc: 0.7329\n",
+      "Loss: 0.18667079858286387, Accuracy: 0.7329446077346802\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Alternative Model 1 Results\")\n",
     "\n",
     "# Evaluate the model loss and accuracy metrics using the evaluate method and the test data\n",
-    "model_loss, model_accuracy =# YOUR CODE HERE\n",
+    "model_loss, model_accuracy = nn_A1.evaluate(X_test_scaled, y_test, verbose=2)\n",
+    "# YOUR CODE HERE\n",
     "\n",
     "# Display the model loss and accuracy results\n",
     "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")"
@@ -3139,14 +3239,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alternative Model 2 Results\n",
+      "8575/8575 - 0s - loss: 0.2120 - binary_accuracy: 0.7204\n",
+      "Loss: 0.21203978427645068, Accuracy: 0.7203702330589294\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Alternative Model 2 Results\")\n",
     "\n",
     "# Evaluate the model loss and accuracy metrics using the evaluate method and the test data\n",
-    "model_loss, model_accuracy = # YOUR CODE HERE\n",
+    "model_loss, model_accuracy = nn_A2.evaluate(X_test_scaled, y_test, verbose=2)\n",
+    "# YOUR CODE HERE\n",
     "\n",
     "# Display the model loss and accuracy results\n",
     "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")"
